clusters/homelab/apps/auth/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    gateway.infra.services/allow-routes: "true"
  name: auth
