clusters/homelab/apps/auth/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: auth
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "auth.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: authentik-server
          port: 80
